modifies path so site can load direct from index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome to Jean's Portfolio</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body id="bg-img">
     <header>
@@ -25,13 +25,13 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">About me</a>
+                    <a href="dist/about.html" class="nav-link">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a href="work.html" class="nav-link">My work</a>
+                    <a href="dist/work.html" class="nav-link">My work</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-link">How to reach me</a>
+                    <a href="dist/contact.html" class="nav-link">How to reach me</a>
                 </li>
             </ul>
         </div>
@@ -65,7 +65,7 @@
         </div>
     </main>
 
-    <script src="js/main.js"></script>
+    <script src="dist/js/main.js"></script>
     
 </body>
 </html>
