Edit links for social media pages

--- a/index.html
+++ b/index.html
@@ -47,20 +47,14 @@
         </h2>
 
         <div class="icons">
-            <a href="">
+            <a href="https://www.linkedin.com/in/jean-mark-kaboha-software-engineer/">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="">
+            <a href="https://github.com/KabohaJeanMark">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://medium.com/@kabohajeanmark">
                 <i class="fab fa-medium fa-2x"></i>
-            </a>
-            <a href="#!">
-                <i class="fab fa-facebook fa-2x"></i>
-            </a>
-            <a href="#!">
-                <i class="fab fa-twitter fa-2x"></i>
             </a>
         </div>
     </main>
