add links for facebook and twitter

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             <a href="https://medium.com/@kabohajeanmark">
                 <i class="fab fa-medium fa-2x"></i>
             </a>
+            <a href="https://twitter.com/jean_quintus">
+                <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            <a href="https://www.facebook.com/jeanmark.kaboha/">
+                <i class="fab fa-facebook fa-2x"></i>
+            </a>
         </div>
     </main>
 
