--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Kaboha <span class="text-secondary">Jean Mark</span>
         </h1>
         <h2 class="sm-heading">
-            Software Engineer, Agile Project Manager, Full Stack Web Developer & Entrepreneur
+            Software Engineer, Full Stack Web Developer & Entrepreneur
         </h2>
 
         <div class="icons">
