Makes contact links more ueful with cellphone callable and email sending to send email.

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
         </h2>
 
         <div class="icons">
-            <a href="https://www.linkedin.com/in/jean-mark-kaboha-software-engineer/">
+            <a href="https://www.linkedin.com/in/jean-mark-kaboha-software-engineer/" target='_blank'>
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="https://github.com/KabohaJeanMark">
+            <a href="https://github.com/KabohaJeanMark" target='_blank'>
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="https://medium.com/@kabohajeanmark">
+            <a href="https://medium.com/@kabohajeanmark" target='_blank'>
                 <i class="fab fa-medium fa-2x"></i>
             </a>
-            <a href="https://twitter.com/jean_quintus">
+            <a href="https://twitter.com/jean_quintus" target='_blank'>
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="https://www.facebook.com/jeanmark.kaboha/">
+            <a href="https://www.facebook.com/jeanmark.kaboha/" target='_blank'>
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
         </div>
