adds favicon file as page logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Jean's Portfolio</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="shortcut icon" href="dist/img/favicon.png">
 </head>
 <body id="bg-img">
     <header>
