Add recent projects to the portfolio

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             Kaboha <span class="text-secondary">Jean Mark</span>
         </h1>
         <h2 class="sm-heading">
-            Software Engineer, Full Stack Web Developer & Entrepreneur
+            Full Stack Software Engineer
         </h2>
 
         <div class="icons">
