--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Kaboha Jean Mark">
     <meta name="description" content="Kaboha Jean Mark is a Software Engineer who specializes in web design. This website is his portfolio project.">
     <meta name="google-site-verification" content="2nOO7myOHSyB3P_KsYjLWet7Anq1w6E1EVIhTQWWYiI" />
+    <meta property="og:image" content="dist/img/home.png">
     <title>Jean's Portfolio</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="dist/css/main.css">
