Update summary and skills

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Kaboha <span class="text-secondary">Jean Mark</span>
         </h1>
         <h2 class="sm-heading">
-            Full Stack Software Engineer
+            Software Engineer
         </h2>
 
         <div class="icons">
