--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </h2>
 
         <div class="icons">
-            <a href="https://www.linkedin.com/in/jean-mark-kaboha-software-engineer/" aria-label="LinkedIn" target='_blank'>
+            <a href="https://www.linkedin.com/in/jeanmarkkaboha/" aria-label="LinkedIn" target='_blank'>
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
             <a href="https://github.com/KabohaJeanMark" aria-label="GitHub" target='_blank'>
