--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="dist/about.html" class="nav-link">About me</a>
                 </li>
                 <li class="nav-item">
-                    <a href="dist/work.html" class="nav-link">My work</a>
+                    <a href="dist/work.html" class="nav-link">My Projects</a>
                 </li>
                 <li class="nav-item">
                     <a href="dist/contact.html" class="nav-link">How to reach me</a>
